# cview2

./: .gitignore  Cargo.toml  package-lock.json  package.json
capture/: Cargo.toml
capture/src/: capture_manager.rs  detector_controller.rs  lib.rs
editor/: Cargo.toml
editor/src/: application.rs  dispatcher.rs  lib.rs
editor/src/messages/: message.rs  mod.rs  prelude.rs
editor/src/messages/detector/: detector_message.rs  detector_message_handler.rs  mod.rs
editor/src/messages/frontend/: frontend_message.rs  mod.rs
editor/src/messages/input_mapper/: input_mapper_message.rs  input_mapper_message_handler.rs  mod.rs
editor/src/messages/input_mapper/utility_types/: input_mouse.rs
editor/src/messages/stack/: mod.rs  stack_message.rs  stack_message_handler.rs
editor/src/messages/tool/: mod.rs  tool_message.rs  tool_message_handler.rs  utility_types.rs
editor/src/messages/tool/common_functionality/: color_selector.rs
editor/src/messages/tool/tool_messages/: mod.rs  rectangle_tool.rs  select_tool.rs
frontend/: .eslintrc.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts.timestamp-1711460442643-5f7c0de52a88c.mjs
frontend/src/: App.svelte  App.tsx  bindings.ts  main.css  main.ts  main.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/DefectMapGeneration/config/: 0510config.txt.txt  1510config.txt.txt  1512config.txt.txt  IS2121.txt  IS3131.txt  cerbconfig.txt.txt  hephaestus.txt.txt  nemesis.txt.txt  poseidon.txt.txt
frontend/src-tauri/capabilities/: default.json  main.json
frontend/src-tauri/src/: commands.rs  event.rs  lib.rs  logs.rs  main.rs
frontend/src-tauri/src/capture/: capture.rs  commands.rs  detector.rs  error.rs  job.rs  mod.rs  report.rs
frontend/src-tauri/src/capture/capture_modes/: defect_map.rs  helpers.rs  mod.rs  sequence.rs  signal_accumulation.rs  stream.rs
frontend/src-tauri/src/image/: command.rs  commands.rs  error.rs  event.rs  file.rs  image.rs  image_commands.rs  manager.rs  mod.rs  roi.rs  stack.rs  statistics.rs  view.rs
frontend/src-tauri/src/shared_buffer/: mod.rs  shared_buffer.rs
frontend/src-tauri/src/task/: error.rs  mod.rs  task.rs  tests.rs  worker.rs
frontend/src/communication/: bindings.ts  subscription.ts
frontend/src/components/: Panel.tsx  README.md  Viewer.svelte
frontend/src/components/floating-menus/: Dialog.svelte
frontend/src/components/panels/: MainPanel.svelte
frontend/src/components/widgets/inputs/: CheckboxInput.svelte  IconButton.svelte  Slider.svelte
frontend/src/components/widgets/labels/: IconLabel.svelte
frontend/src/components/window/: MainWindow.svelte
frontend/src/components/window/title-bar/: TitleBar.svelte
frontend/src/components/window/workspace/: ControlSidebar.svelte  InfoSidebar.svelte  Workspace.svelte
frontend/src/io-managers/: input.ts
frontend/src/lib/: MainWindow.svelte  routes.ts
frontend/src/lib/backend/: ipc.ts
frontend/src/lib/capture/: captureService.ts  types.ts
frontend/src/lib/components/: Badge.svelte  Canvas.svelte  CanvasToolbar.svelte  Capture.svelte  CaptureButton.svelte  Collapsible.svelte  DetectorSelector.svelte  ImageList.svelte  ImageListHeader.svelte  ImageListItem.svelte  MenuBar.svelte  Navbar.svelte  ScrollableContainer.svelte  ToolbarButton.svelte  ViewComponent.svelte  Viewer.svelte
frontend/src/lib/components/Toolbox/: NumberSetting.svelte  (+1 more)
frontend/src/lib/detector/: captureService.ts  detector.ts  detectorService.ts  types.ts
frontend/src/lib/images/: imageController.ts  imageStore.ts  types.ts  viewController.ts
frontend/src/lib/stores/: detectorStore.ts  image.ts  imageStore.ts
frontend/src/lib/utils/: canvasUtils.ts  chartAction.ts
frontend/src/state-providers/: dialog.ts  image.ts  tool.ts
frontend/src/tauri-communication/: editor.ts  tauri-editor.ts
frontend/src/utility-functions/: icons.ts  keyboard-entry.ts
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs  widget_builder.rs
sl_device_rust_wrapper/: Cargo.toml  SLSDK_USB_log.txt  build.rs
sl_device_rust_wrapper/include/: test.h
sl_device_rust_wrapper/src/: lib.rs  test.cc
tools/DefectMapGeneration/config/: 0712config.txt.txt  2301config.txt  a1510config.txt.txt
viewer/: Cargo.toml
viewer/src/: application.rs  consts.rs  dispatcher.rs  lib.rs  renderer.rs  utility_traits.rs
viewer/src/messages/: message.rs  mod.rs  prelude.rs
viewer/src/messages/detector/: detector_message.rs  detector_message_handler.rs  mod.rs
viewer/src/messages/dialog/: dialog_message.rs  dialog_message_handler.rs  mod.rs
viewer/src/messages/dialog/select_detector_dialog/: mod.rs  select_detector_dialog_message.rs  select_detector_dialog_message_handler.rs
viewer/src/messages/frontend/: frontend_message.rs
viewer/src/messages/input_mapper/: input_mapper_message.rs  input_mapper_message_handler.rs  mod.rs
viewer/src/messages/input_mapper/utility_types/: input_keyboard.rs  input_mouse.rs  mod.rs
viewer/src/messages/layout/: layout_message.rs  layout_message_handler.rs  mod.rs
viewer/src/messages/layout/utility_types/: layout_widget.rs  mod.rs
viewer/src/messages/layout/utility_types/widgets/: button_widgets.rs  input_widgets.rs  layout_widgets.rs  menu_widgets.rs  mod.rs
viewer/src/messages/menu_bar/: menu_bar_message.rs  menu_bar_message_handler.rs  mod.rs
viewer/src/messages/portfolio/: mod.rs  portfolio_message.rs  portfolio_message_handler.rs
viewer/src/messages/portfolio/image/: image_message.rs  image_message_handler.rs  mod.rs
viewer/src/messages/portfolio/image/utility_types/: annotations.rs  command.rs  misc.rs  mod.rs
viewer/src/messages/tool/: mod.rs  tool_message.rs  tool_message_handler.rs  utility_types.rs
viewer/src/messages/tool/common_functionality/: resize.rs
viewer/src/messages/tool/tool_messages/: line_tool.rs  mod.rs  rectangle_tool.rs  select_tool.rs
wrapper/: Cargo.toml  SLSDK_USB_log.txt  build.rs
wrapper/include/: test.h  wrapper.h
wrapper/src/: lib.rs  test.cc  wrapper.cc  wrapper.h
(+19 files in other folders)
