[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
serde = { version = "1.0.194", features = ["derive"] }
specta = { workspace = true }
wrapper = { path = "../wrapper" }
async-trait = "0.1.77"
