[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.194", features = ["derive"] }
specta = { workspace = true }
tauri-specta = { workspace = true }
log = { workspace = true }

capture = { path = "../capture" }