[package]
name = "proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
syn = { version = "2.0", default-features = false, features = ["full"] }
quote = "1.0.9"
