[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capture = { path = "../capture" }
bitflags = { version = "2.4.1", features = ["serde"] }
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.194", features = ["derive"] }
specta = { workspace = true }
tauri-specta = { workspace = true }
vello = {git = "https://github.com/linebender/vello" }
raw-window-handle = "0.6.0"
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["serde"] }
derivative = "2.2.0"
image = "0.24.8"
glam = { version = "0.24", default-features = false, features = ["serde"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
