[package]
name = "frontend"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["test"] }
tauri-plugin-log = "2.0.0-beta"
specta = { workspace = true }
tauri-specta = { workspace = true }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["serde"] }
wrapper = { path = "../../wrapper" }
chrono = { version = "0.4.34", features = ["serde"] }
windows-core = "0.52.0"
webview2-com = "0.28.0"
tokio = { version = "1.36.0", features = ["sync"] }
image = "0.24.8"
async-trait = "0.1.77"
log.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
