[package]
name = "frontend"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["test"] }
tauri-plugin-log = "2.0.0-beta"
specta = { workspace = true, features = ["time"] }
tauri-specta = { workspace = true }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["serde"] }
wrapper = { path = "../../wrapper" }
windows-core = "0.52.0"
webview2-com = "0.28.0"
tokio = { version = "1.36.0", features = ["sync", "rt", "macros"] }
image = "0.24.8"
async-trait = "0.1.77"
log.workspace = true
tokio-stream = "0.1.14"
futures = "0.3.30"
thiserror = "1.0.57"
async-stream = "0.3.5"
enum_dispatch = "0.3.12"
env_logger = "0.11.2"
tiff = "0.9.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
