[package]
name = "CView"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
async-channel = "2.2.0"
async-stream = "0.3.5"
async-trait = "0.1.77"
bytemuck = "1.15.0"
chrono = { version = "0.4.35", features = ["serde"] }
downcast-rs = "1.2.0"
enum_dispatch = "0.3.12"
env_logger = "0.11.2"
futures = "0.3.30"
image = "0.25.0"
log.workspace = true
mockall = "0.12.1"
pin-project = "1.1.5"
serde = { version = '1.0.194', features = ['derive'] }
serde_as = "0.0.1"
serde_json = "1.0"
serde_with = "3.7.0"
specta = { workspace = true }
tauri = { version = '2.0.0-beta', features = ['test'] }
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-specta = { workspace = true }
thiserror = "1.0.57"
tiff = "0.9.1"
tokio = { version = '1.36.0', features = ['sync', 'rt', 'macros'] }
tracing = "0.1.40"
uuid = { version = '1.7.0', features = ['serde'] }
webview2-com = "0.28.0"
windows-core = "0.52.0"
wrapper = { path = '../../wrapper' }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
